# ThingsIForget

./: CMakeLists.txt  a2lextractor.py  anaconda.md  git_comands.md  init.lua  nvim.md
vscode/: extensions.txt  keybindings.json  settings.json
